# orderbook

./: .clang-format  .gitignore  CMakeLists.txt  FIX44.xml  README.md
cmake/: FindFtxUI.cmake  FindQuickfix.cmake
spec/: DERIBIT_FIX44.xml
src/: crypto.cpp  crypto.h  main.cpp  orderbook.cpp  orderbook.h
src/datasources/: datasource.h  deribit.cpp  deribit.h
tests/: orderbook_test.cpp
